--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,29 +1,71 @@
 <section class="hero">
     <div class="hero-container">
-        <div class="hero-faces-img">
-            <ul class="hero-link">
-                <li class="hero-list"><img class="hero-face-img-item" src="" alt="">1</li>
-                <li class="hero-list"><img class="hero-face-img-item" src="" alt="">2</li>
-                <li class="hero-list"><img class="hero-face-img-item" src="" alt="">3</li>
-                <li class="hero-list"><img class="hero-face-img-item" src="" alt="">4</li>
-            </ul>
+
+        <div class="hero-face-list">
+            
+            <div class="hero-div-face" >
+                <img class="hero-face-img" width="42px" height="42px" src="../img/hero/face1-1x.png" alt="face1">
+            </div>
+
+            <div class="hero-div-face-one" >
+                <img class="hero-face-img" width="42px" height="42px" src="./img/hero/face2-1x.png" alt="face2">
+            </div>
+        
+            <div class="hero-div-face-two">
+                <img class="hero-face-img" width="42px" height="42px" src="./img/hero/face3-1x.png" alt="face3">
+            </div>
+        
+            <div class="hero-div-face-three">
+                    <span class="hero-face-img-span">
+                        <p class="hero-face-img-text">2K <span class="hero-text-reviews">reviews</span></p>
+                    </span>
+            </div>
+
         </div>
-        <h1 class="hero-titel">TO ORDER YOUR VEGETABLE BASKET, SIMPLY FOLLOW THESE EASY STEPS</h1>
+        
+        <h1 class="hero-titel">organic <span class="hero-titel-span">vegetables</span> to your diet today!</h1>
         <p class="hero-text">
             Our expertly curated vegetable baskets are made with the freshest, highest quality vegetables available. Fresh Harvest
             Box has got you covered. Fresh, high-quality vegetables in expertly curated vegetable baskets delivered to you.
         </p>
-
-        <button class="hero-btn" type="button">shop now</button>
+      
+         <button class="hero-btn" 
+                    type="button" 
+                    data-menu-open>SHOP NOW</button>
+    
+        
 
         <!-- background img!!! -->
+        <img    class="hero-bg-img"
+                srcset="../img/hero/hero-img-1x.png 1x, ../img/hero/hero-img-1x.png 2x" 
+                src="../img/hero/hero-img-1x.png" 
+                alt="girl-with-latuck" 
+                width="278px" 
+                height="228px">
 
-        <ul class="hero-btn-pages">
-            <li class="hero-btn-pages-list"><button class="hero-btn-pages-btn" type="button"><a class="hero-btn-pages-link" href=""></a>o</button></li>
-            <li class="hero-btn-pages-list"><button class="hero-btn-pages-btn" type="button"><a class="hero-btn-pages-link" href=""></a>p</button></li>
-            <li class="hero-btn-pages-list"><button class="hero-btn-pages-btn" type="button"><a class="hero-btn-pages-link" href=""></a>b</button></li>
-            <li class="hero-btn-pages-list"><button class="hero-btn-pages-btn" type="button"><a class="hero-btn-pages-link" href=""></a>v</button></li>
-        </ul>
+        <!-- Navigation pannel -->
+
+        <nav class="hero-nav">
+            <ul class="hero-nav-list">
+               <li class="hero-nav-item">
+                <a class="hero-nav-link" href="#organic">#organic</a>
+               </li>
+
+                <li class="hero-nav-item">
+                    <a class="hero-nav-link" href="#products">#products</a>
+                </li>
+
+                <li class="hero-nav-item">
+                    <a class="hero-nav-link" href="#basket">#basket</a>
+                </li>
+
+                <li class="hero-nav-item">
+                    <a class="hero-nav-link" href="#vegetables">#vegetables</a>
+                </li>
+            </ul>
+
+        </nav>
+
+        
     </div>
 </section>
-<p class="hero-p">Hallo!</p>
